--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <h1>Chat App</h1>
-        <button id="increment">+1</button>
+        <form id="form">
+            <input id="message" placeholder="Send a message">
+            <button>Send</button>
+        </form>
         <script src="/socket.io/socket.io.js"></script>
         <script src="./js/chat.js"></script>
     </body>
