--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
             <input id="message" placeholder="Send a message">
             <button>Send</button>
         </form>
+        <button id="location">Send location</button>
+        
         <script src="/socket.io/socket.io.js"></script>
         <script src="./js/chat.js"></script>
     </body>
