--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,30 @@
     </head>
     <body>
         <h1>Chat App</h1>
-        <form id="form">
-            <input id="message" placeholder="Send a message">
-            <button>Send</button>
+
+        <div id="messages"></div>
+
+        <form id="message-form">
+            <input id="message-input" placeholder="Send a message">
+            <button id="message-button">Send</button>
         </form>
-        <button id="location">Send location</button>
-        
+        <button id="location-button">Send location</button>
+
+        <script id="message-template" type="text/html">
+            <div>
+                <p>{{msg}}</p>
+            </div>
+        </script>
+
+        <script id="location-message-template" type="text/html">
+            <div>
+                <p><a href="{{url}}" target="_blank">My current location</a></p>
+            </div>
+        </script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="./js/chat.js"></script>
     </body>
