--- a/public/index.html
+++ b/public/index.html
@@ -8,47 +8,17 @@
         <title>Chat App</title>
     </head>
     <body>
-        <div class="chat">
-            <div class="sidebar">
-
-            </div>
-            <div class="main">
-                <div id="messages" class="chat-messages"></div>
-
-                <div class="compose">
-                     <form id="message-form">
-                        <input id="message-input" placeholder="Send a message">
-                        <button id="message-button">Send</button>
-                    </form>
-                    <button id="location-button">Send location</button>
-                </div>
+        <div class="form">
+            <div class="form-box">
+                <h1>Join</h1>
+                <form action="chat.html">
+                    <label>Username</label>
+                    <input type="text" name="username" placeholder="Username" required>
+                    <label>Room</label>
+                    <input type="text" name="room" placeholder="Room" required>
+                    <button>Join</button>
+                </form>
             </div>
         </div>
-
-        <script id="message-template" type="text/html">
-            <div class="message">
-                <p>
-                    <span class="message-name">Some User Name</span>
-                    <span class="message-time">{{createdAt}}</span>
-                </p>
-                <p>{{msg}}</p>
-            </div>
-        </script>
-
-        <script id="location-message-template" type="text/html">
-            <div class="message">
-                <p>
-                    <span class="message-name">Some User Name</span>
-                    <span class="message-time">{{createdAt}}</span>
-                </p>
-                <p><a href="{{url}}" target="_blank">My current location</a></p>
-            </div>
-        </script>
-
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
-        <script src="/socket.io/socket.io.js"></script>
-        <script src="./js/chat.js"></script>
     </body>
 </html>
