--- a/public/chat.html
+++ b/public/chat.html
@@ -17,7 +17,7 @@
 
                 <div class="compose">
                      <form id="message-form">
-                        <input id="message-input" placeholder="Send a message">
+                        <input id="message-input" placeholder="Send a message" required autocomplete="off">
                         <button id="message-button">Send</button>
                     </form>
                     <button id="location-button">Send location</button>
@@ -28,7 +28,7 @@
         <script id="message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message-name">Some User Name</span>
+                    <span class="message-name">{{username}}</span>
                     <span class="message-time">{{createdAt}}</span>
                 </p>
                 <p>{{msg}}</p>
@@ -38,7 +38,7 @@
         <script id="location-message-template" type="text/html">
             <div class="message">
                 <p>
-                    <span class="message-name">Some User Name</span>
+                    <span class="message-name">{{username}}</span>
                     <span class="message-time">{{createdAt}}</span>
                 </p>
                 <p><a href="{{url}}" target="_blank">My current location</a></p>
