Made app responsive

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,19 @@
         <title>Chat App</title>
     </head>
     <body>
-        <div class="form">
-            <div class="form-box">
-                <h1>Join</h1>
-                <form action="chat.html">
-                    <label>Username</label>
-                    <input type="text" name="username" placeholder="Username" required>
-                    <label>Room</label>
-                    <input type="text" name="room" placeholder="Room" required>
-                    <button>Join</button>
-                </form>
+        <div id="header">
+            <h1 id="main-title">Chat App</h1>
+            <div class="form">
+                <div class="form-box">
+                    <h1 id="form-title">Join</h1>
+                    <form action="chat.html">
+                        <label>Username</label>
+                        <input type="text" name="username" placeholder="Username" required>
+                        <label>Room</label>
+                        <input type="text" name="room" placeholder="Room" required>
+                        <button>Join</button>
+                    </form>
+                </div>
             </div>
         </div>
     </body>
