--- a/public/chat.html
+++ b/public/chat.html
@@ -31,7 +31,7 @@
                     <span class="message-name">{{username}}</span>
                     <span class="message-time">{{createdAt}}</span>
                 </p>
-                <p>{{msg}}</p>
+                <p id="message-text">{{msg}}</p>
             </div>
         </script>
 
